# pylegendmeta

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  AGENTS.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: distribution.yml  main.yml
docs/: Makefile
docs/source/: .py_api_exclude  conf.py  index.rst  kitchen-sink.rst  tutorial.rst
src/legendmeta/: Props.py  __init__.py  catalog.py  core.py  hadesmetadata.py  jsondb.py  legendmetadata.py  police.py  query.py  scdb_tables.py  slowcontrol.py  tables.py  textdb.py  utils.py
src/legendmeta/templates/: auxs-channel.json  auxs-channel.yaml  bege-detector.json  bege-detector.yaml  bsln-channel.yaml  coax-detector.json  coax-detector.yaml  geds-channel.json  geds-channel.yaml  hpge-channel.json  icpc-detector.json  icpc-detector.yaml  pmts-channel.yaml  ppc-detector.json  ppc-detector.yaml  puls-channel.yaml  sipm-channel.json  spms-channel.json  spms-channel.yaml
src/legendmeta/tmp_vis/: merge_groupings.py  plot_partition_groupings.py
src/legendmeta/vis/: __init__.py  common.py  partitions.py  psd.py  usability.py
tests/: test_catalog.py  test_copying.py  test_core.py  test_jsondb.py  test_lmeta.py  test_metadata_repository.py  test_police.py  test_query.py  test_slowcontroldb.py  test_tables.py  test_utils.py
tests/testdb/: arrays.json  arrays.yaml  file1.json  file2.json  file2.yaml  file3.json
tests/testdb/dir1/: file3.yaml  file5.yml  file6.yaml  key_resolve.jsonl  validity.yaml  validity.yml
tests/testdb/dir1/dir2/: file4.yaml
