[build-system]
requires = [
    "setuptools>=42.0.0",
    "setuptools_scm[toml]>=3.4"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/legendmeta/_version.py"

[project]
name = "pylegendmeta"
description = "Python LEGEND-metadata implementation"
authors = [
    { name = "Luigi Pertoldi", email = "gipert@pm.me" },
]
maintainers = [
    { name = "The LEGEND Collaboration" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"
dependencies = [
    "GitPython",
    "pandas",
    "pyyaml",
    "psycopg2-binary",
    "sqlalchemy>=2",
]
dynamic = [
    "version",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "GPL-3.0"

[project.urls]
Homepage = "https://github.com/legend-exp/pylegendmeta"
"Bug Tracker" = "https://github.com/legend-exp/pylegedmeta/issues"
Discussions = "https://github.com/legend-exp/pylegedmeta/discussions"
Changelog = "https://github.com/legend-exp/pylegedmeta/releases"

[project.optional-dependencies]
all = [
    "pylegendmeta[docs,test]",
]
docs = [
    "furo",
    "myst-parser",
    "sphinx>=7.2.2",
    "sphinx-copybutton",
    "sphinx-inline-tabs",
]
test = [
    "pre-commit",
    "pytest>=6.0",
    "pytest-cov",
]

[project.scripts]
validate-legend-chmaps = "legendmeta.police:validate_legend_channel_map"
validate-legend-detdb = "legendmeta.police:validate_legend_detector_db"

[tool.setuptools]
include-package-data = true
zip-safe = false
license-files = [
    "LICENSE",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.setuptools.dynamic.version]
attr = "legendmeta._version.version"

[tool.codespell]
ignore-words-list = "crate,nd,unparseable,compiletime"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
filterwarnings = ["error", 'ignore:\nPyarrow:DeprecationWarning']
log_cli_level = "info"
testpaths = "tests"

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
extend-select = [
  "B",        # flake8-bugbear
  "I",        # isort
  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
  "G",        # flake8-logging-format
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "EXE",      # flake8-executable
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
  "PT011",    # too picky pytest.raises() complaint
]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]
