[metadata]
name = pylegendmeta
version = attr: legendmeta._version.version
description = Python LEGEND-metadata implementation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/legend-exp/pylegendmeta
author = Luigi Pertoldi
author_email = gipert@pm.me
maintainer = The LEGEND Collaboration
license = GPL-3.0
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development

[options]
packages = find:
install_requires =
    GitPython
    pandas
    psycopg2-binary
    sqlalchemy>=2
python_requires = >=3.9
include_package_data = True
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    validate-legend-chmaps = legendmeta.police:validate_legend_channel_map
    validate-legend-detdb = legendmeta.police:validate_legend_detector_db

[options.extras_require]
all =
    pylegendmeta[docs,test]
docs =
    furo
    myst-parser
    sphinx
    sphinx-copybutton
    sphinx-inline-tabs
test =
    pre-commit
    pytest>=6.0
    pytest-cov

[flake8]
extend-ignore = E203, E501, D10

[codespell]
ignore-words-list = crate
